# cpp-template

./: .clang-format
src/lib/: CMakeLists.txt
